Fix Layout bug

--- a/styles/default.css
+++ b/styles/default.css
@@ -2,6 +2,7 @@
 	position: relative;
 	width: calc(100% - 10px);
 	padding: 5px;
+	margin-top: 10px;
 }
 
 #VNEXT-PrefsContainer {
